# BookStore

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  env.dev  heroku.yml  pyproject.toml
.circleci/: config.yml
.github/workflows/: build.yml  heroku_deploy.yml  quality-assurance.yml  workflow-pr.yml
core/: __init__.py  settings.py  urls.py
core/bookstore/: __init__.py  admin.py  apps.py  factories.py  models.py  urls.py
core/bookstore/migrations/: 0001_initial.py
core/bookstore/models/: Order.py  Product.py  __init__.py  category.py  order.py  product.py
core/bookstore/serializers/: __init__.py  category_serializer.py  order_serializer.py  product_serializer.py
core/bookstore/viewsets/: __init__.py  category_viewset.py  order_viewset.py  product_viewset.py
tests/: test_category.py  test_categoryviewset.py  test_order.py  test_orderviewset.py  test_product.py  test_productviewset.py
