[tool.poetry]
name = "bookstore"
version = "1.0.0"
description = ""
authors = ["Mateus Diniz <serv.mateus@gmail.com>"]
readme = "README.md"
packages = [
    { include = "core", from = './'},
    { include = "./core/bookstore/"}
]

[tool.poetry.dependencies]
python = "^3.10"
factory-boy = "^3.3.0"
djangorestframework = "^3.14.0"
pytest = "^8.0.2"
pytest-django = "^4.8.0"
Django = "^5.0.2"
psycopg2-binary = "^2.9.9"
flake8 = "^7.0.0"
black = "^24.2.0"
whitenoise = "^6.6.0"
gunicorn = "^21.2.0"
django-extensions = "^3.2.3"
django-restframework = "^0.0.1"
django-debug-toolbar = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
